--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,7 +8,63 @@
     <style rel="stylesheet" href="styles.css"></style>
     <script src="script.js" defer></script>
 </head>
+
 <body>
-    
+
+    <div id="calc-container">
+        <div id="display"></div>
+        <div id="memory-func">
+            <div>mc</div>
+            <div>mr</div>
+            <div>m-</div>
+            <div>m+</div>
+        </div>
+        <div id="main-func">
+            <div id="numpad">
+                <div id="numpad-upper">
+                    <div id="clear"></div>
+                    <div id="sqrt"><span>x</span></div>
+                    <div id="percent">%</div>
+                </div>
+                <div id="numpad-lower">
+                    <div>
+                        <div>7</div>
+                        <div>8</div>
+                        <div>9</div>
+                    </div>
+                    <div>
+                        <div>4</div>
+                        <div>5</div>
+                        <div>6</div>
+                    </div>
+                    <div>
+                        <div>1</div>
+                        <div>2</div>
+                        <div>3</div>
+                    </div>
+                    <div>
+                        <div>0</div>
+                        <div>.</div>
+                        <div>+/-</div>
+                    </div>
+                </div>
+            </div>
+            <div id="operator-pad">
+                <p>/</p>
+                <p>x</p>
+                <p>-</p>
+                <p>+</p>
+                <p>=</p>
+            </div>
+        </div>
+        <div id="misc-func">
+            <div id="pi">pi</div>
+            <div id="pow">x<span>y</span></div>
+            <div id="round-two">R2</div>
+            <div id="round-zero">R0</div>
+        </div>
+    </div>
+
 </body>
+
 </html>
