Refactor Calculator Function Into Object
Refactor calculator function into objects based on whether
they are binary or unary operator. Adjust div ID in HTML
to simplify button function.

--- a/index.html
+++ b/index.html
@@ -13,53 +13,53 @@
 
     <div id="calc-container">
         <div id="display">0</div>
-        <div class="flex-row button-slim grey-base">
-            <div>mc</div>
-            <div>mr</div>
-            <div>m-</div>
-            <div>m+</div>
+        <div class="flex-row button-slim grey-base get-id">
+            <div id='mc'>mc</div>
+            <div id='mr'>mr</div>
+            <div id='m-'>m-</div>
+            <div id='m+'>m+</div>
         </div>
         <div class="flex-row">
             <div>
-                <div class="flex-row button grey-base">
+                <div class="flex-row button grey-base get-id">
                     <div id="clear">AC</div>
                     <div id="sqrt"><span>x</span></div>
-                    <div id="percent">%</div>
+                    <div id="percentage">%</div>
                 </div>
                 <div>
-                    <div class="flex-row button bold white-base">
-                        <div>7</div>
-                        <div>8</div>
-                        <div>9</div>
+                    <div class="flex-row button bold white-base get-id">
+                        <div id="7">7</div>
+                        <div id="8">8</div>
+                        <div id="9">9</div>
                     </div>
-                    <div class="flex-row button bold white-base">
-                        <div>4</div>
-                        <div>5</div>
-                        <div>6</div>
+                    <div class="flex-row button bold white-base get-id">
+                        <div id="4">4</div>
+                        <div id="5">5</div>
+                        <div id="6">6</div>
                     </div>
-                    <div class="flex-row button bold white-base">
-                        <div>1</div>
-                        <div>2</div>
-                        <div>3</div>
+                    <div class="flex-row button bold white-base get-id">
+                        <div id="1">1</div>
+                        <div id="2">2</div>
+                        <div id="3">3</div>
                     </div>
-                    <div class="flex-row button bold white-base">
-                        <div>0</div>
-                        <div>.</div>
-                        <div>+/-</div>
+                    <div class="flex-row button bold white-base get-id">
+                        <div id="0">0</div>
+                        <div id=".">.</div>
+                        <div id="flip-sign">+/-</div>
                     </div>
                 </div>
             </div>
-            <div id="operator-pad" class="button bold yellow-base">
-                <div>/</div>
-                <div>x</div>
-                <div>-</div>
-                <div>+</div>
-                <div>=</div>
+            <div id="operator-pad" class="button bold yellow-base get-id">
+                <div id="divide">/</div>
+                <div id="multiply">x</div>
+                <div id="subtract">-</div>
+                <div id="add">+</div>
+                <div id="execute">=</div>
             </div>
         </div>
-        <div class="flex-row button grey-base">
+        <div class="flex-row button grey-base get-id">
             <div id="pi">&pi;</div>
-            <div id="pow">x<sup>y</sup></div>
+            <div id="power">x<sup>y</sup></div>
             <div id="round-two">R2</div>
             <div id="round-zero">R0</div>
         </div>
