Revert "Add Basic Operation Function"
This reverts commit e9534785e02b4a44dbc724407d8a5cd16d0a53e9.

--- a/index.html
+++ b/index.html
@@ -14,16 +14,16 @@
     <div id="calc-container">
         <div id="display">0</div>
         <div class="flex-row button-slim grey-base get-id">
-            <div id="mc">mc</div>
-            <div id="mr">mr</div>
-            <div id="m-">m-</div>
-            <div id="m+">m+</div>
+            <div id='mc'>mc</div>
+            <div id='mr'>mr</div>
+            <div id='m-'>m-</div>
+            <div id='m+'>m+</div>
         </div>
         <div class="flex-row">
             <div>
                 <div class="flex-row button grey-base get-id">
                     <div id="clear">AC</div>
-                    <div id="sqrt">x</div>
+                    <div id="sqrt"><span>x</span></div>
                     <div id="percentage">%</div>
                 </div>
                 <div>
