Add Memory Function
Add memory function and add refresh function to change text
on all clear button.

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <div>
                 <div class="flex-row button grey-base get-id">
                     <div id="clear">AC</div>
-                    <div id="sqrt"><span>x</span></div>
+                    <div id="sqrt">x</div>
                     <div id="percentage">%</div>
                 </div>
                 <div>
